Functionality for mood Angry: - ListView & Adapter Structure - Music Class - List click listener - Angry intent to details page and back

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="romantic">Romantic</string>
     <string name="sad">Sad</string>
 
+    <string name="music_details">Music Details</string>
+
 </resources>
